buildscript {
	ext {
		springBootVersion = '1.3.2.RELEASE'
		reactorVersion = '2.0.7.RELEASE'
		apacheHttpAsyncClientVersion = '4.1.1'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
	}
}

apply plugin: 'java'
apply plugin: 'spring-boot' 

jar {
	baseName = 'messageservice'
	version = '0.0.1-SNAPSHOT'
}
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
	mavenCentral()
}


dependencies {
	compile('org.springframework.boot:spring-boot-starter-web')
	compile "io.projectreactor:reactor-core:${reactorVersion}"
	compile "io.projectreactor:reactor-bus:${reactorVersion}"
//	compile "org.apache.httpcomponents:httpclient:4.5.1"
	compile "org.apache.httpcomponents:httpasyncclient:${apacheHttpAsyncClientVersion}"
	compile "se.sawano.java:commons:1.3"

	testCompile "org.skyscreamer:jsonassert:1.3.0"
	testCompile('org.springframework.boot:spring-boot-starter-test') 
}

task wrapper(type: Wrapper) {
	gradleVersion = '2.12'
}
